Update name per request

--- a/freedvdboot.html
+++ b/freedvdboot.html
@@ -594,7 +594,7 @@ boot:
 </p>
 
 <p>
-	This isn't a perfect solution since we don't have source code for all PS2 homebrew produced over the last 20 years, but it is also possible to binary patch homebrew to manually replace the <code>cdvd.irx</code> IOP module with a new one to add DVD video support. For instance, ChelseaFantasy patched the closed source SNES Station emulator, allowing me to make the following demo (special thanks!):
+	This isn't a perfect solution since we don't have source code for all PS2 homebrew produced over the last 20 years, but it is also possible to binary patch homebrew to manually replace the <code>cdvd.irx</code> IOP module with a new one to add DVD video support. For instance, 'Howling Wolf & Chelsea' patched the closed source SNES Station emulator, allowing me to make the following demo (special thanks!):
 </p>
 
 <div class="center">
@@ -692,7 +692,7 @@ f0 07 00 00 0b 00 -> 00 30 00 00 11 00 (VIDEO_TS.BUP/VTS_01_0.IFO LBA to 145 and
 <hr>
 
 <p>
-	With thanks to krHacken, uyjulian, ChelseaFantasy, and ffgriver.
+	With thanks to krHacken, uyjulian, 'Howling Wolf & Chelsea', and ffgriver.
 </p>
 
 			</div>
