--- a/freedvdboot.html
+++ b/freedvdboot.html
@@ -53,7 +53,7 @@
 <br>
 
 <p>
-	Ultimately, I was successfully able to achieve my goal by exploiting the console's DVD player functionality. This blog post will describe the technical details and process of reversing and exploiting the DVD player. All of my code is <a href="https://github.com/CTurt/FreeDVDBoot">available on GitHub</a>. Loading <a href="#backups">backups of commercial games is also possible</a>.
+	Ultimately, I was successfully able to achieve my goal by exploiting the console's DVD player functionality. This blog post will describe the technical details and process of reversing and exploiting the DVD player. Loading <a href="#backup">backups of commercial games is also possible</a>. All of my code is <a href="https://github.com/CTurt/FreeDVDBoot">available on GitHub</a>.
 </p>
 
 <div class="center">
