--- a/freedvdboot.html
+++ b/freedvdboot.html
@@ -102,7 +102,7 @@
 </p>
 
 <p>
-	Due to the large number of different PlayStation 2 models released, each with slightly different DVD player firmwares (> 50...), I will focus on a single DVD player for the duration of this article: 3.10E (configured with English language in PS2 settings), as it happens to be the firmware for the console I own. Update: apparently region doesn't matter as my 3.10E exploit was confirmed work on a 3.10U console.
+	Due to the large number of different PlayStation 2 models released, each with slightly different DVD player firmwares (> 50...), I will focus on a single DVD player for the duration of this article: 3.10E (configured with English language in PS2 settings), as it happens to be the firmware for the console I own. Update: apparently the 3.10E exploit described here works on 3.10U console with no changes.
 </p>
 
 <p>
