update some old articles

--- a/ps4.html
+++ b/ps4.html
@@ -225,7 +225,7 @@ ret</code></pre>
 				
 				<br>
 				
-				<h2>Finding gadgets</h2>
+				<h2 id="finding-gadgets">Finding gadgets</h2>
 				<p>
 					Think of ROP as writing a new chapter to a book, using only words that have appeared at the end of sentences in the previous chapters.
 				</p>
