--- a/articles.html
+++ b/articles.html
@@ -98,6 +98,7 @@
 					<li><a href="cinoop.html">Writing a Game Boy emulator</a></li>
 					<li><a href="pinball.html">Reverse Engineering and Modding Mario Pinball Land (GBA)</a></li>
 					<li><a href="shogihax.html">shogihax - Remote Code Execution on Nintendo 64 through Morita Shogi 64</a></li>
+					<li><a href="poker.html">How I hacked an online Poker site!</a></li>
 				</ul>
 			</div>
 		</div>
