mast1c0re part 2

--- a/articles.html
+++ b/articles.html
@@ -62,12 +62,15 @@
 
 					<br>
 
+					<h3>PlayStation 5</h3>
+
 					<p>
 						mast1c0re: Hacking the PS4 / PS5 through the PS2 Emulator (2022):
 					</p>
 
 					<ul>
 						<li><a href="mast1c0re.html">Part 1 - Escape</a></li>
+						<li><a href="mast1c0re-2.html">Part 2 - Compiler Attack</a></li>
 					</ul>
 					
 					<br>
@@ -101,7 +104,7 @@
 					</ul>
 				</div>
 					
-					<hr>
+				<hr>
 			</div>
 		</div>
 	</body>
