--- a/mast1c0re.html
+++ b/mast1c0re.html
@@ -35,7 +35,7 @@
 				<span class="date">Initial publication: September 14th, 2022</span>
 				<hr>
 				
-<p>In this article I will discuss how I successfully escaped the PS2 emulator developed for the PlayStation 4. See also <a href="mast1c0re-2.html">Part 2</a> (to be published), covering the next part of the exploit chain, and PlayStation&#39;s response to the research.</p>
+<p>In this article I will discuss how I successfully escaped the PS2 emulator developed for the PlayStation 4. See also <a href="mast1c0re-2.html">Part 2</a>, covering the next part of the exploit chain, and PlayStation&#39;s response to the research.</p>
 <p>For the impatient, a demo video for the first part of this chain is presented <a href="#video-demo">later</a> in this article.</p>
 <p><em>Note that these vulnerabilities were discovered and reported back in September 2021, but I was only able to publish this now.</em></p>
 <br>
